[JAVA-48564] Apply new formatter to samples-formatted