@@ -18,10 +18,8 @@ public class CustomAuthenticationDetailsSource implements AuthenticationDetailsS
     @Override
     public GrantedAuthoritiesContainer buildDetails(HttpServletRequest context) {
         Enumeration<String> headerValues = context.getHeaders("BAEL-authorities");
-        Collection<GrantedAuthority> authorities = Collections.list(headerValues)
-            .stream()
-            .map(value -> new SimpleGrantedAuthority(value))
-            .collect(Collectors.toList());
+        Collection<GrantedAuthority> authorities = Collections.list(headerValues).stream().map(value -> new SimpleGrantedAuthority(value)).collect(Collectors
+            .toList());
         return new PreAuthenticatedGrantedAuthoritiesWebAuthenticationDetails(context, authorities);
     }
 
